--- a/Analysis_Report.Rmd
+++ b/Analysis_Report.Rmd
@@ -11,11 +11,13 @@ output:
 1. [Introduction](#introduction)
 2. [Data information](#data-information)
 3. [Predicition of course completion time](#predicition-of-course-completion-time)
+4. [Collisions per scenario](#collisions-per-scenario)
+
 
 ##Introduction (This doesent become a headline - why?)
 
-This is the statistical report associated with the paper "Evaluating the detection space" by Milo Marsfeldt Skovfoged & Alexander Schiller rasmussen. The field of study lies in research on behalf of visually impaired/blind navigation through environments  to find an ideal distance and Field of Detection (FOD) for the most progressive travel-route avoiding collisions as much as possible.
-This report gives an overview of how data for the study was gathered and analysed, in regrads to different points of interrest.
+This is the statistical report associated with the paper "Evaluating the detection space" by Milo Marsfeldt Skovfoged & Alexander Schiller rasmussen. The field of study lies in research on behalf of visually impaired/blind navigation through environments to find an ideal distance and Field of Detection (FOD) for the most progressive travel-route, while avoiding collisions as much as possible.
+This report gives an overview of what data for the study was gathered and analysed, in regrads to different points of interrest.
 
 ```{r setup, include=FALSE}
 library(tidyverse)
@@ -69,6 +71,7 @@ model_equation <- function(model, ...) {
 }
 
 
+daggHeat <- df %>% filter(Person_Speed<3)%>%group_by(Scenario,FOD,Range,day)%>%summarize(avgSpeed=mean(Person_Speed),medianSpeed=median(Person_Speed),maxSpeed=max(Person_Speed),minSpeed=min(Person_Speed),objectDetected=sum(objDet,na.rm = TRUE),objectCollisions=sum(objColl,na.rm = TRUE),Time=max(Time_in_MS*1000))
 
 ###----------------Numeric Analysis part----------------###
 
@@ -92,6 +95,17 @@ daggByScenWOBL$predTime<-predict(m)
 m0<-lm(log(Time)~log(totalTimeTraining)+FOD*log(Range),data=daggByScen)
 
 
+baseDat <- daggByScen[daggByScen$FOD=="Baseline",]
+mbaseDat <- lm(log(Time)~log(totalTimeTraining),data=baseDat)
+
+
+wrDat <- daggByScen[daggByScen$FOD=="WholeRoom",]
+mwrDat<- lm(log(Time)~log(totalTimeTraining),data=wrDat)
+
+
+corrDat <- daggByScen[daggByScen$FOD=="Corridor",]
+mcorrDat<- lm(log(Time)~log(totalTimeTraining),data=corrDat)
+
 ###----------------Plots data----------------###
 lower_ci <- function(mean, se, n, conf_level = 0.95){
   lower_ci <- mean - qt(1 - ((1 - conf_level) / 2), n - 1) * se
@@ -114,7 +128,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Data information
 Here goes the explanaion of our data in regards to what we logged and how is is structured.
 
-
+Below a summary of our data is presente:
 ```{r first summary, echo=FALSE}
 
 summary(daggByScen)
@@ -122,25 +136,28 @@ summary(daggByScen)
 #Shows a table of the data (e.g. could be the coefficients for completion time to FOD compairson)
 ```
 
-Here goes exlanation of the plot:
-
-```{r First plot, echo=FALSE}
-##("echo=FALSE" parameter was added to the code chunk to prevent printing of the R code that generated the plot.)
-
-# plot(nameOfPlot) OR do something custom ¯\_(ツ)_/¯
-```
-
 
 ## Predicition of course completion time
+Splitting the data up into different models for predection of completion time, the following coefficients were extracetd from each model.
 
-```{r Comp.Time.Pred., echo=FALSE}
-summary(m0)
+Baseline data:
+```{r baseData summary, echo=FALSE}
+coef(lm(Time ~ totalTimeTraining, data = baseDat))
+```
+
+WholeRoom data
+```{r wrData summary, echo=FALSE}
+coef(lm(Time ~ totalTimeTraining, data = wrDat))
+```
+
+Corrdiro data
+```{r corrData summary, echo=FALSE}
+coef(lm(Time ~ totalTimeTraining, data = corrDat))
 ```
 
 
 
-
-```{r , echo=FALSE}
+```{r , echo=FALSE, error=FALSE}
 #Figure has an error
 ggplot(daggByDFR,aes(x=totalTimeTraining,y=avgTime,color=factor(Range),shape=factor(Range)))+
   geom_point()+ 
@@ -152,8 +169,30 @@ ggplot(daggByDFR,aes(x=totalTimeTraining,y=avgTime,color=factor(Range),shape=fac
 ```
 
 
+The heatmap shows the avg. speed per scenario for the different FODS with different ranges.
+```{r, HmAvgspdScen}
+ggplot(daggHeat, aes(x = Range, y = Scenario)) + 
+  geom_tile(aes(fill = avgSpeed)) + 
+  geom_text(aes(fill = daggHeat$avgSpeed, label = round(daggHeat$avgSpeed, 2))) + 
+  scale_fill_gradient2(low = muted("red"), 
+                       mid = "yellow", 
+                       high = muted("green"), 
+                       midpoint = 0.75) + 
+  theme(panel.grid.major.x=element_blank(), 
+        panel.grid.minor.x=element_blank(), 
+        panel.grid.major.y=element_blank(), 
+        panel.grid.minor.y=element_blank(),
+        panel.background=element_rect(fill="white"), 
+        axis.text.x = element_text(angle=0, hjust = 1,vjust=1,size = 12,face = "bold"),
+        plot.title = element_text(size=20,face="bold"),
+        axis.text.y = element_text(size = 12,face = "bold")) + 
+  ggtitle("HeatMap Over avgSpeed per Scenario") + 
+  theme(legend.title=element_text(face="bold", size=14)) + 
+  scale_y_continuous(trans = "reverse")+
+  labs(fill="avgSpeed") +
+  facet_grid(cols=vars(FOD), row=vars(day))
+```
 
 
-
-
+## Collisions per scenario
 
