Progress on Analysis report

--- a/Analysis_Report.Rmd
+++ b/Analysis_Report.Rmd
@@ -13,10 +13,10 @@ output:
 3. [Predicition of course completion time](#predicition-of-course-completion-time)
 4. [Collisions and Detections](#collisions-and-detections)
 
-##Introduction (This doesent become a headline - why?)
+## Introduction
 
-This is the statistical report associated with the paper "Evaluating the detection space" by Milo Marsfeldt Skovfoged & Alexander Schiller rasmussen. The field of study lies in research on behalf of visually impaired/blind navigation through environments to find an ideal distance and Field of Detection (FOD) for the most progressive travel-route, while avoiding collisions as much as possible.
-This report gives an overview of what data for the study was gathered and analysed, in regrads to different points of interrest.
+This is the statistical report associated with the paper "Evaluating the detection space" by Milo Marsfeldt Skovfoged & Alexander Schiller rasmussen. The field of study lies in research on behalf of visually impaired/blind navigation through environments, to find an ideal distance and Field of Detection (FOD) for the most progressive travel-route, while avoiding collisions as much as possible.
+This report gives an overview of what data was gathered and analysed, in regrads to different points of interrest.
 
 ```{r setup, include=FALSE,}
 library(tidyverse)
@@ -100,10 +100,15 @@ mbaseDat <- lm(log(Time)~log(totalTimeTraining),data=baseDat)
 
 wrDat <- daggByScen[daggByScen$FOD=="WholeRoom",]
 mwrDat<- lm(log(Time)~log(totalTimeTraining),data=wrDat)
-
+wr2Dat <- wrDat[wrDat$Range=="2",]
+wr3Dat <- wrDat[wrDat$Range=="3",]
+wr4Dat <- wrDat[wrDat$Range=="4",]
 
 corrDat <- daggByScen[daggByScen$FOD=="Corridor",]
 mcorrDat<- lm(log(Time)~log(totalTimeTraining),data=corrDat)
+corr2Dat <- corrDat[corrDat$Range=="2",]
+corr3Dat <- corrDat[corrDat$Range=="3",]
+corr4Dat <- corrDat[corrDat$Range=="4",]
 
 ###----------------Plots data----------------###
 lower_ci <- function(mean, se, n, conf_level = 0.95){
@@ -118,60 +123,79 @@ daggByDFR<-daggByScen %>%group_by(FOD,day,Range)%>%summarize(totalTimeTraining=m
 #Learning curve
 totalTimeTraining=1:6000
 #Set to summary variables 
+FOD = "Baseline"
+Range="1"
 b=21.45979
 z= -0.06329
 #This is the Time fed into dxf
 Time<- b*totalTimeTraining^z
 baseDatxf=as.data.frame(totalTimeTraining)
 baseDatxf=cbind(baseDatxf,Time)
+baseDatxf=cbind(baseDatxf,FOD)
+baseDatxf=cbind(baseDatxf,Range)
 
-
- 
+FOD = "Corridor" 
+Range="2"
 b=31.32990
 z=-0.10500
 Time<- b*totalTimeTraining^z
 corr2Datxf=as.data.frame(totalTimeTraining)
 corr2Datxf=cbind(corr2Datxf,Time)
+corr2Datxf=cbind(corr2Datxf,FOD)
+corr2Datxf=cbind(corr2Datxf,Range)
 
+Range="3"
 b=54.72364
 z=-0.17482
 Time<- b*totalTimeTraining^z
 corr3Datxf=as.data.frame(totalTimeTraining)
 corr3Datxf=cbind(corr3Datxf,Time)
+corr3Datxf=cbind(corr3Datxf,FOD)
+corr3Datxf=cbind(corr3Datxf,Range)
 
+Range="4"
 b=9.81972
 z=0.03528
 Time<- b*totalTimeTraining^z
 corr4Datxf=as.data.frame(totalTimeTraining)
 corr4Datxf=cbind(corr4Datxf,Time)
+corr4Datxf=cbind(corr4Datxf,FOD)
+corr4Datxf=cbind(corr4Datxf,Range)
 
 
-
+FOD = "WholeRoom"
+Range="2"
 b=37.2835	
 z=-0.1273
 Time<- b*totalTimeTraining^z
 wr2Datxf=as.data.frame(totalTimeTraining)
 wr2Datxf=cbind(wr2Datxf,Time)
+wr2Datxf=cbind(wr2Datxf,FOD)
+wr2Datxf=cbind(wr2Datxf,Range)
 
+Range="3"
 b=47.50384	
 z=-0.15325
 Time<- b*totalTimeTraining^z
 wr3Datxf=as.data.frame(totalTimeTraining)
 wr3Datxf=cbind(wr3Datxf,Time)
+wr3Datxf=cbind(wr3Datxf,FOD)
+wr3Datxf=cbind(wr3Datxf,Range)
 
-
+Range="4"
 b=54.86090	
 z=-0.16613
 Time<- b*totalTimeTraining^z
 wr4Datxf=as.data.frame(totalTimeTraining)
 wr4Datxf=cbind(wr4Datxf,Time)
-
+wr4Datxf=cbind(wr4Datxf,FOD)
+wr4Datxf=cbind(wr4Datxf,Range)
 
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Data information
-Below a summary of our data is presented. In total, a 420 tests were completed, using three different Field Of Detections (FOD), with WholeRoom and Corridor differing between three ranges (two, three and four meters). 
+Below, a summary of our data is presented. In total, 420 tests were completed over three days (140 per day), using three different Field Of Detections (FOD), with exception of WholeRoom and Corridor differing between three ranges (two, three and four meters). Scenarios describe the amount of different parkours the system were tested on (each condition with different lengths). In addition, each test logged the speed of the participant, the amount of objects detected by the cane, the amount of collisions by the user and the completion time of the individual parkours.
 ```{r first summary, echo=FALSE}
 
 summary(daggByScen)
@@ -181,6 +205,8 @@ summary(daggByScen)
 
 
 ## Predicition of course completion time
+The plot below shows the average time of completion of scenarios, over the course of the total time the user was training, using the system. Inspecting the x-axis, one can tel that the totalTimeTraining seems to differ between the FOD's. The cause is the order in which the different FOD's were tested over the three days, which ended up placing the Corridor in the middel of the dataset, leaving the Baseline and WholeRoom with more training time.
+<!--
 Splitting the data up into different models for predection of completion time, the following coefficients were extracetd from each model.
 
 Baseline data:
@@ -194,43 +220,104 @@ coef(lm(Time ~ totalTimeTraining, data = wrDat))
 ```
 
 Corrdiro data
-```{r corrData summary, echo=FALSE}
+```{r corrData summary, echo=FALSE, message=FALSE}
 coef(lm(Time ~ totalTimeTraining, data = corrDat))
 ```
+-->
 
-
-
-```{r Training time over scenario time, echo=FALSE, error=FALSE, fig.height=10, fig.width=10}
+```{r Training time over scenario time, echo=FALSE, error=FALSE, message=FALSE, fig.height=10, fig.width=10}
 #Figure has an error
-ggplot(daggByDFR,aes(x=totalTimeTraining,y=avgTime,color=factor(Range),shape=factor(Range)))+
+traonOScenplot<-ggplot(daggByDFR,aes(x=totalTimeTraining,y=avgTime,color=factor(Range),shape=factor(Range)))+
   geom_point()+ 
   geom_smooth(size=0)+ 
   geom_errorbar(aes(ymin=lower_ci, ymax=upper_ci))+
   stat_smooth(method = 'nls', formula = 'y~a*x^b', method.args = list(start= c(a = 1,b=1)),se=FALSE)+
   theme_bw()+
   facet_grid(cols=vars(FOD))
+
+suppressWarnings(print(traonOScenplot))
 ```
 
 
-```{r Training time over scenario stretched ,echo=FALSE, error=FALSE, fig.height=10, fig.width=10}
-ggplot(daggByScen, aes(x=totalTimeTraining, y=Time, colour=factor(FOD)))+
+To smoothen it out, coefficients for predicting the avg time over training time were calculated, by sorting the aggregated data by FOD and Range - hence the following paramters for estimations were made:
+**Note: FOD Corridor with a range of 4 meters gives the impression of getting worse over time, which is due to some immediate well achived run on the first day. In addition, the data contains some outliers which will need further investigation.**
+
+###### Baseline data
+```{r BaseData summary, echo=FALSE, error=FALSE}
+summary(nls(Time ~ b*totalTimeTraining^z,
+            start = list(b = 1, z = 1),
+            data = baseDat))
+```
+
+###### Corridor 2 meters data
+```{r Corridor2mData summary, echo=FALSE, error=FALSE}
+summary(nls(Time ~ b*totalTimeTraining^z,
+            start = list(b = 1, z = 1),
+            data = corr2Dat))
+```
+
+###### Corridor 3 meters data
+```{r Corridor3mData summary, echo=FALSE, error=FALSE}
+summary(nls(Time ~ b*totalTimeTraining^z,
+            start = list(b = 1, z = 1),
+            data = corr3Dat))
+```
+
+###### Corridor 4 meters data
+```{r Corridor4mData summary, echo=FALSE, error=FALSE}
+summary(nls(Time ~ b*totalTimeTraining^z,
+            start = list(b = 1, z = 1),
+            data = corr4Dat))
+```
+
+###### WholeRoom 2 meters data
+```{r WholeRoom2mData summary, echo=FALSE, error=FALSE}
+summary(nls(Time ~ b*totalTimeTraining^z,
+            start = list(b = 1, z = 1),
+            data = wr2Dat))
+
+```
+
+###### WholeRoom 3 meters data
+```{r WholeRoom3mData summary, echo=FALSE, error=FALSE}
+summary(nls(Time ~ b*totalTimeTraining^z,
+            start = list(b = 1, z = 1),
+            data = wr3Dat))
+```
+
+###### WholeRoom 4 meters data
+```{r WholeRoom4mData summary, echo=FALSE, error=FALSE}
+summary(nls(Time ~ b*totalTimeTraining^z,
+            start = list(b = 1, z = 1),
+            data = wr4Dat))
+```
+
+
+Plotting these new predictions onto the data, we see the development in average time of completion for the scenarios over totalTimeTraining. Noteworthy here is that FOD WholeRoom "recieves" a penalty as the Range increases, indicating looking further ahead means slower completion time. Another aspect is that FOD Corridor seems to be at best with a Range of three meters.
+
+```{r Training time over scenario stretched ,echo=FALSE, error=FALSE, message=FALSE, fig.height=10, fig.width=10}
+ggplot(daggByScen, aes(x=totalTimeTraining, y=Time, colour=factor(Range)))+
   geom_point()+ theme_bw()+
-  geom_line(data=baseDatxf, color="red")+
-  geom_line(data=corr2Datxf, color="green")+
-  geom_line(data=corr3Datxf, color="green")+
-  geom_line(data=corr4Datxf, color="green")+
-  geom_line(data=wr2Datxf, color="blue")+
-  geom_line(data=wr3Datxf, color="blue")+
-  geom_line(data=wr4Datxf, color="blue")
+  geom_line(data=baseDatxf)+
+  geom_line(data=corr2Datxf)+
+  geom_line(data=corr3Datxf)+
+  geom_line(data=corr4Datxf)+
+  geom_line(data=wr2Datxf)+
+  geom_line(data=wr3Datxf)+
+  geom_line(data=wr4Datxf)+
+    facet_grid(cols=vars(FOD))+
+    ylim(0,30)
 
 ```
 
 
-The heatmap shows the avg. speed per scenario for the different FODS with different ranges.
-```{r, HmAvgspdScen, echo=FALSE, fig.height=10, fig.width=10}
-ggplot(daggHeat, aes(x = Range, y = Scenario)) + 
-  geom_tile(aes(fill = avgSpeed)) + 
-  geom_text(aes(fill = daggHeat$avgSpeed, label = round(daggHeat$avgSpeed, 2))) + 
+
+To further inspect the time used for completing each scenario, the heatmap shown below, plots average completion time per scenario for the different FODS with different ranges. Here the outliers stand out, in terms of scenario 19 in DOF Corridor on day one and scenario five in DOF Baseline on day two. Noteworthy is also day one of FOD WholeRoom, which is slower, compared to the other FOD's.
+
+```{r TimePerScenarioHM, echo=FALSE, message=FALSE, warning=FALSE, fig.height=10, fig.width=10}
+ggplot(daggByScen, aes(x = Range, y = Scenario)) + 
+  geom_tile(aes(fill = Time)) + 
+  geom_text(aes(fill = daggByScen$Time, label = round(daggByScen$Time, 2))) + 
   scale_fill_gradient2(low = muted("red"), 
                        mid = "yellow", 
                        high = muted("green"), 
@@ -243,18 +330,20 @@ ggplot(daggHeat, aes(x = Range, y = Scenario)) +
         axis.text.x = element_text(angle=0, hjust = 1,vjust=1,size = 12,face = "bold"),
         plot.title = element_text(size=16,face="bold"),
         axis.text.y = element_text(size = 12,face = "bold")) + 
-  ggtitle("HeatMap - avgSpeed per Scenario") + 
+  ggtitle("HeatMap Over Time per Scenario") + 
   theme(legend.title=element_text(face="bold", size=10)) + 
   scale_y_continuous(trans = "reverse")+
-  labs(fill="avgSpeed") +
+  labs(fill="Time in s") +
   facet_grid(cols=vars(FOD), row=vars(day))
 ```
 
 
+
+
 ## Collisions and Detections
 
-The heatmap below shows object collisions for each scenario. Noteworthy that using WholeRoom DOF, the participant managed to achieve collisions on scenario one, day one, which is supposed to be a clear walkingpath with objects spread out to the sides.
-```{r, HmColprScen, echo=FALSE, fig.height=10, fig.width=10}
+The heatmap below shows the amount of object collisions for each scenario between, between differnt FOD's and Ranges. Noteworthy that using WholeRoom DOF, the participant managed to achieve collisions on scenario one, day one, which is supposed to be a clear walkingpath with objects spread out to the sides, making it difficult to collide with an object.
+```{r, HmCollprScen, echo=FALSE, message=FALSE, warning=FALSE, fig.height=10, fig.width=10}
 ggplot(daggHeat, aes(x = Range, y = Scenario)) + 
   geom_tile(aes(fill = objectCollisions)) + 
   geom_text(aes(fill = daggHeat$objectCollisions, label = round(daggHeat$objectCollisions, 2))) + 
@@ -278,8 +367,8 @@ ggplot(daggHeat, aes(x = Range, y = Scenario)) +
 ```
 
 
-The heatmap below shows object detections for each scenario. Again scenario one is very noteworthy of the few detections using Corridor FOD, where the walking path is clear, compared to Wholeroom FOD.
-```{r, HmDetprScen, echo=FALSE, fig.height=10, fig.width=10}
+The next heatmap shows the amount of object detections for each scenario, between differnt FOD's and Ranges. Again, scenario one is very noteworthy for the few detections using FOD Baseline and Corridor, where the walking path is clear, compared to FOD Wholeroom, which conducts alot of information.
+```{r, HmDetprScen, echo=FALSE, message=FALSE, warning=FALSE, fig.height=10, fig.width=10}
 ggplot(daggHeat, aes(x = Range, y = Scenario)) + 
   geom_tile(aes(fill = objectDetected)) + 
   geom_text(aes(fill = daggHeat$objectDetected, label = round(daggHeat$objectDetected, 2))) + 
@@ -299,6 +388,69 @@ ggplot(daggHeat, aes(x = Range, y = Scenario)) +
   theme(legend.title=element_text(face="bold", size=10)) + 
   scale_y_continuous(trans = "reverse")+
   labs(fill="Detections") +
+  facet_grid(cols=vars(FOD), row=vars(day))
+```
+
+
+
+Collisions and detections also have an impact on the speed which the participant moves through scenarios. Below two graphs show that the impact of collisions as well as detections both grow while speed decreases.
+
+
+```{r Collisions/DetectionsprScenario ,echo=FALSE, message=FALSE, warning=FALSE, fig.height=5, fig.width=5}
+ggplot(daggByScen,aes(y = avgSpeed, x = objectCollisions, color = factor(Range)))+
+  geom_point(aes(alpha=.1))+ 
+  geom_jitter()+
+  #geom_smooth(size=0)+
+  stat_smooth(method = 'nls', formula = 'y~a+x*b', method.args = list(start= c(a = 1,b=1)),se=FALSE)+
+  theme_bw()+
+  facet_grid(cols=vars(FOD))
+
+ggplot(daggByScen,aes(y = avgSpeed, x = objectDetected, color = factor(Range)))+
+  geom_point(aes(alpha=.1))+
+  geom_jitter()+
+  #geom_smooth(size=0)+
+  stat_smooth(method = 'nls', formula = 'y~a+x*b', method.args = list(start= c(a = 1,b=1)),se=FALSE)+
+  theme_bw()+
+  facet_grid(cols=vars(FOD))
+```
+
+
+
+
+
+
+## Speed
+
+
+Noteworthy, compared to the time it takes to complete a scenario over training time (as presented earlier), DOF Corridor with a Range of three meters becomes the fastest of the FOD Corridor Ranges on day three. However, looking at the average speed (as shown in the plot below), the corridor with a Range of two meters has a faster walking speed. This yields that a faster walking speed does not necessary mean a faster completion time.
+```{r ,}
+ggplot(daggByScen,aes(x=totalTimeTraining,y=avgSpeed,color=factor(Range)))+
+  geom_point(aes(alpha=.1))+ 
+  stat_smooth(method = 'nls', formula = 'y~a*x^b', method.args = list(start= c(a = 1,b=1)),se=FALSE)+
+  facet_grid(cols=vars(FOD))
+```
+
+
+```{r HmAvgspdScen, echo=FALSE, message=FALSE, warning=FALSE, fig.height=10, fig.width=10}
+ggplot(daggHeat, aes(x = Range, y = Scenario)) + 
+  geom_tile(aes(fill = avgSpeed)) + 
+  geom_text(aes(fill = daggHeat$avgSpeed, label = round(daggHeat$avgSpeed, 2))) + 
+  scale_fill_gradient2(low = muted("red"), 
+                       mid = "yellow", 
+                       high = muted("green"), 
+                       midpoint = 0.75) + 
+  theme(panel.grid.major.x=element_blank(), 
+        panel.grid.minor.x=element_blank(), 
+        panel.grid.major.y=element_blank(), 
+        panel.grid.minor.y=element_blank(),
+        panel.background=element_rect(fill="white"), 
+        axis.text.x = element_text(angle=0, hjust = 1,vjust=1,size = 12,face = "bold"),
+        plot.title = element_text(size=16,face="bold"),
+        axis.text.y = element_text(size = 12,face = "bold")) + 
+  ggtitle("HeatMap - avgSpeed per Scenario") + 
+  theme(legend.title=element_text(face="bold", size=10)) + 
+  scale_y_continuous(trans = "reverse")+
+  labs(fill="avgSpeed") +
   facet_grid(cols=vars(FOD), row=vars(day))
 ```
 
